# GameConfiger

./: CMakeLists.txt
assets/language/: GameConfiger_zh_CN.ts
